chamber/styles/chamber-base.css
:root {
    --main-color: rgb(122, 225, 155);
    --secondary-color: rgb(47, 47, 47);
}

* {
    margin: 0;
    padding: 0;
    font-family: "Google Sans", sans-serif;
}

header {
    background-color: var(--main-color);
    text-align: center;
}

.headercontainer {
    display: grid;
    grid-template-columns: 15% 1fr 15%;
}

header img {
    min-width: 60px;
    height: auto;
    padding: 1rem;
}

header span {
    margin-top: 40px;
    font-size: 1.2rem;
    font-weight: bold;
}

.hambutton {
    background: none;
    border: none;
    color: var(--secondary-color);
    cursor: pointer;
    margin-top: 10px;
}

.hambutton::after {
    content: "\2630";
    font-size: 2.5rem;
}

.hambutton.show::after {
    content: "\00D7";
    font-size: 2.5rem;
}

.navbar {
    display: none;
}

.navbar.show {
    display: block;
}

header ul {
    background-color: rgb(255, 251, 243);
}

header li {
    list-style: none;
    font-size: 1.5rem;
}

header a {
    display: block;
    text-decoration: none;
    color: rgb(0, 0, 0);
    padding: 1.5rem;
    border: 1px solid rgb(181, 174, 162);
}

header a:hover {
    color: var(--main-color);
    background-color: var(--secondary-color);
}

.current {
    background-color: rgb(255, 251, 243);
    text-decoration: underline;
}

main {
    background-color: rgb(233, 233, 233);
    max-width: 1277px;
    margin: 0 auto;
}

main h1 {
    margin: 0;
    padding-top: 1rem;
    text-align: center;
}

.buttonContainer {
    padding: 1rem;
    text-align: center;
}

.cbutton,
.lbutton {
    padding: 1rem;
    font-size: 1rem;
    margin: 12px;
    background-color: rgb(233, 233, 233);
    border-radius: 7px;
}

.cbutton:hover,
.lbutton:hover {
    background-color: var(--secondary-color);
    color: var(--main-color);
    cursor: pointer;
}

.card img {
    width: 150px;
    height: auto;
    padding: 12px;
}

.card {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    text-align: center;
    gap: 1rem;
    padding: 45px;
}

.card section {
    background-color: rgb(255, 255, 255);
    height: 315px;
    box-shadow: 0 0 15px var(--secondary-color);
}

.card h2 {
    margin-top: 1rem;
}

.card p {
    margin-top: 0.5rem;
}

.list img {
    display: none;
}

.list h2 {
    font-size: 1rem;
}

.list section {
    display: flex;
    align-items: center;
    padding: 1rem;
    border: 1px solid rgb(202, 202, 202);
}

.list section:nth-child(even) {
    background-color: rgb(255, 255, 255);

}

.list p {
    margin-left: 1rem;
}

footer {
    background-color: var(--main-color);
}

.container {
    padding: 1rem;
}

.socials {
    margin: 1rem;
    column-gap: 8px;
    display: flex;
    justify-content: center;
}

.socials a {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 66px;
    height: 66px;
    border: 1px solid var(--secondary-color);
    border-radius: 44px;
}

.socials a:hover {
    background-color: rgb(95, 184, 123);
}

.socials img {
    width: 44px;
    height: 44px;
}

.hero {
    width: 100%;
    height: auto;
    display: block;
}

.join {
    top: 435px;
    right: 50px;
    color: rgb(255, 255, 255);
    background-color: var(--secondary-color);
    padding: 30px;
    display: flex;
}

.join li {
    list-style-type: none;
}

.join a {
    text-decoration: none;
    color: rgb(0, 0, 0);
    padding: 12px;
    background-color: var(--main-color);
    border-radius: 12px;
    margin-left: 12px;
    font-weight: bold;
}

.curr-events,
.weather,
.weather-forcast,
.comp-spotlight {
    margin: 12px;
}

.curr-events h2,
.weather h2,
.weather-forcast h2 {
    background-color: var(--secondary-color);
    text-align: center;
    color: rgb(233, 233, 233);
    padding: 10px;
    font-size: 20px;
}

.curr-events {
    height: 250px;
}

.curr-events p {
    margin: 12px;
}

.weather-container {
    display: grid;
    grid-template-columns: 30% 70%;
    margin: 12px;
}

.weather-container img {
    width: 100%;
    height: auto;
}

.weather-container p {
    margin-bottom: 5px;
}

.weather-forcast {
    text-align: center;
}

.weather-forcast h3 {
    margin-top: 12px;
}

.comp-spotlight img {
    width: 50%;
    height: auto;
}

.comp-spotlight {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
    gap: 5px;
}

.comp-spotlight div {
    margin-bottom: 12px;
    border: 1px solid var(--secondary-color);
    text-align: center;
    padding: 12px;
    background-color: rgb(255, 255, 255);
    border-radius: 5px;
}

.joinMain {
    margin-left: 20px;
}

.firstN,
.lastN,
.orgTitle,
.emailAdress,
.phoneNumber,
.businessN,
.business-desc,
.membershipLvl {
    margin-bottom: 25px;
    margin-top: 30px;
}

.firstN input,
.lastN input,
.orgTitle input,
.emailAdress input,
.phoneNumber input,
.businessN input {
    margin-top: 5px;
    width: 70%;
    height: 44px;
}

.business-desc textarea{
    width: 70%;
    height: 150px;
}

.firstN label,
.lastN label,
.orgTitle label,
.emailAdress label,
.phoneNumber label,
.businessN label,
.business-desc label,
.membershipLvl p {
    display: block;
    font-weight: bold;
    font-size: 20px;
}

.c-change {
    color: rgb(203, 1, 1);
}

.req-text {
    margin-left: 20px;
    font-style: italic;
    margin-top: 20px;
    margin-bottom: 2rem;
}

.membershipLvl label {
    margin-bottom: 20px;
    margin-top: 10px;
    display: flex;
    align-items: center;
}

.membershipLvl input {
    width: 44px;
    height: 44px;
    margin-right: 12px;
}

.subButton {
    width: 70%;
    height: 44px;
    margin-bottom: 20px;
    font-size: 1.2rem;
    background-color: var(--main-color);
}

.subButton:hover {
    cursor: pointer;
}

.subButton:active {
    background-color: rgb(80, 133, 108);
}

#memberlvlCards {
    padding-bottom: 1.5rem;
}

#memberlvlCards div {
    animation: memberLvlFade 1s forwards;
    margin-top: 12px;
    font-size: 1.2rem;
    padding: 1rem;
    width: 70%;
    text-align: center;
    background-color: rgb(255, 251, 243);
    border: 2px solid var(--secondary-color);
    border-top-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

#memberlvlCards button {
    padding: .5rem;
    margin-top: 12px;
    background-color: rgb(255, 255, 255);
}

#memberlvlCards button:hover {
    cursor: pointer;
    background-color: rgb(228, 228, 228);
}

#memberDialog {
    margin: auto;
}

@keyframes memberLvlFade {
    from {
        background-color: rgb(224, 202, 169);
        opacity: 0;
        transform: translateY(15px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

#memberDialogContainer {
    padding: 1.5rem;
    width: 70%;
    margin: 0 auto;
}

.dialogContainer {
    display: grid;
    grid-template-columns: auto 50px;
    padding: 10px;   
}

#memberDialogContainer p {
    padding: 5px;
}

#closeButton {
    background-color: var(--main-color);
}

#closeButton:hover {
    cursor: pointer;
    background-color: rgb(95, 184, 123);
}

::backdrop {
    background-color: rgba(16, 16, 16, 0.693);
}

.thankYouContainer {
    padding-bottom: 3rem;
    padding-top: 3rem;
    width: 70%;
    height: auto;
    margin: auto;
}

#recipt {
    border: 1px solid var(--secondary-color);
}

#recipt p {
    background-color: rgb(255, 255, 255);
    padding: .5rem;
}

